--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,13 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+    <%= "Pig Latinizer!" %>
+
+  <form method="POST" action="/piglatinize">
+  <p><%= "Enter your phrase:" %></p>
+  <p><input type="text" name= "user_phrase"></p>
+  <input type="submit" id="submit">
+  </form>
+
   </body>
 </html>
